# albs-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/skills/albs-mcp-dev/: SKILL.md
.cursor/skills/albs-mcp-dev/evals/: evals.json
skills/albs-cli/: SKILL.md
src/albs_mcp/: _commands.py  cli.py  client.py  constants.py  server.py
tests/: test_cli_unit.py  test_client_unit.py  test_server_unit.py
