[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "albs-mcp"
version = "0.1.0"
description = "MCP server for AlmaLinux Build System (build.almalinux.org)"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
albs-mcp = "albs_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
